[project]
name = "reentbot"
version = "0.1.0"
description = "LLM-powered smart contract audit agent"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "docker>=7.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.0"]

[project.scripts]
reentbot = "reentbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
